@@ -22,6 +22,9 @@
  */
 
 // key: compiler.err.value.type.has.identity.super.type
+// key: compiler.note.preview.filename
+// key: compiler.note.preview.recompile
+// options: --enable-preview -source ${jdk.version}
 
 abstract class AC {}
 value class V extends AC {}
